# backend

./: .dic  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  log.py  logging-ci.yaml  logging-prd.yaml  logging.yaml  main.py  pyproject.toml  requirements.txt  sonar-project.properties
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml  python-app.yml
app/: config.py  const.py  log.py  main.py  security.py
app/base/: do.py  enums.py  vo.py
app/client/: google_calendar.py  google_maps.py  oauth.py
app/exceptions/: __init__.py
app/middleware/: api.py  auth.py  context.py  envelope.py  headers.py  logging.py
app/persistence/: __init__.py
app/persistence/amqp_consumer/: __init__.py
app/persistence/amqp_publisher/: __init__.py
app/persistence/database/: __init__.py  account.py  album.py  business_hour.py  city.py  court.py  district.py  email_verification.py  gcs_file.py  reservation.py  reservation_member.py  s3_file.py  sport.py  stadium.py  util.py  venue.py  view.py
app/persistence/email/: __init__.py  forget_password.py  invitation.py  verification.py
app/persistence/file_storage/: __init__.py  avatar.py  gcs.py
app/persistence/gcs/: __init__.py
app/persistence/redis/: __init__.py
app/persistence/s3/: __init__.py
app/processor/amqp/: __init__.py
app/processor/http/: __init__.py  account.py  album.py  business_hour.py  city.py  court.py  district.py  google.py  public.py  reservation.py  sport.py  stadium.py  venue.py  view.py
app/service/: calendar.py
app/utils/: __init__.py  context.py  invitation_code.py  parameters.py  reservation_status.py  response.py  security.py
deploy/: Chart.yaml  helm_deploy.sh  values.yaml
deploy/templates/: deployment.yaml
persistence/: __init__.py
persistence/amqp_publisher/: __init__.py
persistence/database/: __init__.py  util.py
persistence/redis/: __init__.py
processor/http/: account.py
test/: __init__.py
test/app/: test_security.py
test/middleware/: test_auth.py  test_envelope.py
tests/: __init__.py  test_main.py
tests/app/: test_security.py
(+65 files in other folders)
