[tool.poetry]
name = "Joinee"
version = "0.1.0"
description = ""
authors = ["wsa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
asyncpg = "^0.28.0"
databases = "^0.8.0"
python-dotenv = "^1.0.0"
starlette-context = "^0.3.5"
PyJWT = "^2.6.0"
passlib = "1.7.4"
argon2-cffi = "^23.1.0"
python-multipart = "^0.0.6"
python-json-logger = "2.0.7"
PyYAML = "6.0.1"
aioredis = "^2.0.1"
google-cloud-storage = "^2.13.0"
aiosmtplib = "^3.0.1"
pydantic = {extras = ["email"], version = "^2.4.2"}

[tool.poetry.group.dev.dependencies]
responses = "^0.23.3"
coverage = "^7.3.2"
freezegun = "^1.2.2"
pycodestyle = "^2.11.1"
isort = "^5.12.0"
pytest = "^7.4.3"
parameterized = "^0.9.0"
pre-commit = "^3.5.0"

[tool.isort]
src_paths = ["isort", "test"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
